--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 INHERIT: nav.yml
 
-site_name: hango
-repo_url: https://github.com/hango-io
-repo_name: hango-io
+site_name: ' '
+repo_url: https://github.com/hango-io/hango-gateway
+repo_name: hango-gateway
 site_description: Hango Documentation
 extra_css:
   - stylesheets/extra.css
@@ -11,7 +11,7 @@ edit_uri: https://github.com/loggie-io/docs/tree/main/docs/
 theme:
   name: material
   language: zh
-  logo: assets/todo.png
+  logo: assets/hango-logo.svg
   favicon: assets/todo.png
   custom_dir: overrides
   icon:
